[tool.poetry]
name = "panther_analysis_tool"
version = "0.17.0"
description = "Panther command line interface for writing, testing, and packaging policies/rules."
authors = ["Panther Labs Inc <pypi@runpanther.io>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/panther-labs/panther_analysis_tool"
packages = [
    {include = "panther_analysis_tool"}
]
keywords = ["Security", "CLI"]
include = [
    "panther_analysis_tool/log_schemas/__init__.py",
    "panther_analysis_tool/log_schemas/user_defined.py",
    "panther_analysis_tool/backend/graphql/*.graphql"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
panther_analysis_tool = "panther_analysis_tool.main:run"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "==1.21.42"
jsonpath-ng = "==1.5.3"
requests = "==2.27.1"
schema = "==0.7.5"
semver = "==2.13.0"
gql = { extras = ["aiohttp"], version = "==3.3.0" }
graphql-core = "==3.2.1"
"ruamel.yaml" = "==0.17.21"
botocore = "==1.24.42"
certifi = "==2021.10.8"
chardet = "==4.0.0"
contextlib2 = "==0.6.0.post1"
decorator = "==5.1.1"
dynaconf = "==3.1.8"
idna = "==3.3"
jmespath = "==1.0.0"
ply = "==3.11"
python-dateutil = "==2.8.2"
"ruamel.yaml.clib" = "==0.2.6"
s3transfer = "==0.5.2"
six = "==1.16.0"
urllib3 = "==1.26.9"
typing-extensions = "==4.3.0"
jsonlines = "==3.0.0"
panther-core = "==0.0.10"

[tool.poetry.group.dev.dependencies]
bandit = "==1.7.0"
black = "~=22.10.0"
isort = "==5.8.0"
mypy = "==0.812"
pylint = "==2.7.2"
pyfakefs = "==4.4.0"
nose = "==1.3.7"
PyYAML = "==5.4.1"
coverage = "==6.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
